tg-28 pantalla pacientes home

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -4,5 +4,15 @@
 		"SUBTITLE": "Sistema de gestión hospitalaria"
 	},
 	"core": {
+	},
+	"pacientes": {
+		"home": {
+			"TITLE": "PACIENTES",
+			"find_add_section": {
+				"TITLE": "Búsqueda / Creación de HC",
+				"BUTTON_ADD": "Crear paciente temporal",
+				"BUTTON_SEARCH": "Buscar"
+			}
+		}
 	}
 }
