--- a/front-end/webapp/src/assets/i18n/en-US.json
+++ b/front-end/webapp/src/assets/i18n/en-US.json
@@ -4,5 +4,15 @@
 		"SUBTITLE": "Sistema de gestión hospitalaria"
 	},
 	"core": {
+	},
+	"pacientes": {
+		"home": {
+			"TITLE": "PATIENTS",
+			"find_add_section": {
+				"TITLE": "Find / Add HC",
+				"BUTTON_ADD": "Add patient",
+				"BUTTON_SEARCH": "Search"
+			}
+		}
 	}
 }
