tg-25 agrega pacientes layout

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -13,6 +13,11 @@
 				"BUTTON_ADD": "Crear paciente temporal",
 				"BUTTON_SEARCH": "Buscar"
 			}
+		},
+		"layout": {
+			"PACIENTES": "Pacientes",
+			"INTERNACION": "HCE Internación",
+			"CAMAS": "Gestión de camas"
 		}
 	}
 }
