tg-52 home page components pacientes, tabla pacientes

--- a/front-end/webapp/src/assets/i18n/en-US.json
+++ b/front-end/webapp/src/assets/i18n/en-US.json
@@ -7,7 +7,8 @@
 	},
 	"pacientes": {
 		"home": {
-			"TITLE": "PATIENTS",
+			"TITLE": "Patients",
+			"TITLE_SEARCH": "Patients search",
 			"find_add_section": {
 				"TITLE": "Find / Add HC",
 				"BUTTON_ADD": "Add patient",
