tg-26 agrega theme material ajusta app-content y crea secciones elimina codigo muerto uso navlist para sidenav minor fixes

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -1,9 +1,6 @@
 {
 	"header": {
-		"TITLE": "SGH",
-		"SUBTITLE": "Sistema de gestión hospitalaria"
-	},
-	"core": {
+		"TITLE": "Sistema de Gestión Hospitalaria"
 	},
 	"pacientes": {
 		"home": {
