tg-64 home busqueda rapida de paciente, ajustes en formulario de busqueda

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -18,6 +18,9 @@
 				"NO_IDENTITY": "No acredita identidad",
 				"TITLE": "Búsqueda / Creación de HC"
 			}
+		},
+		"search": {
+			"TITLE": "Búsqueda de pacientes"
 		}
 	}
 }
