tg-79 crea component patient-card

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -22,5 +22,10 @@
 		"search": {
 			"TITLE": "Búsqueda de pacientes"
 		}
+	},
+	"presentation": {
+		"ficha-paciente": {
+			"GENDER_AGE": "{{gender}} · {{age}} años"
+		}
 	}
 }
