tg-67 home de internacion con tabla de internados servicios de tabla a un service del core servicio api de internacion

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -23,6 +23,11 @@
 			"TITLE": "Búsqueda de pacientes"
 		}
 	},
+	"internacion": {
+		"internados-table": {
+			"TITLE": "Búsqueda de pacientes"
+		}
+	},
 	"presentation": {
 		"patient-card": {
 			"GENDER_AGE": "{{gender}} · {{age}} años"
