tg-98. [BE] Implementar endpoint para obtener datos básicos de la persona/paciente.

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -32,3 +32,5 @@ role.min.value=Id role has to be greater than 1
 invalid.user=User invalid
 ########################
 
+####### patient #######
+invalid.patient=Paciente invalido
