--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -33,3 +33,7 @@ role.invalid=Id rol invalido
 role.min.value=Id rol tiene que ser mayor a 1
 invalid.user=Usuario invalido
 ########################
+
+
+####### patient #######
+invalid.patient=Invalid patient
