tg-100 add ficha internación del paciente

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -23,9 +23,12 @@
 			"TITLE": "Búsqueda de pacientes"
 		}
 	},
-	"internacion": {
+	"internaciones": {
 		"internados-table": {
 			"TITLE": "Búsqueda de pacientes"
+		},
+		"internacion-paciente": {
+			"TITLE": "HCE Internación"
 		}
 	},
 	"presentation": {
