tg-99. [BE] Implementar endpoint para obtener la información personal de la persona.

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -32,5 +32,8 @@ role.min.value=Id role has to be greater than 1
 invalid.user=User invalid
 ########################
 
-####### patient #######
-invalid.patient=Paciente invalido
+####### Patient #######
+invalid.patient=Invalid patient
+
+####### Person #######
+person.invalid=Invalid person
