--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -35,5 +35,8 @@ invalid.user=Usuario invalido
 ########################
 
 
-####### patient #######
-invalid.patient=Invalid patient
+####### Patient #######
+invalid.patient=Paciente desconocido
+
+####### Person #######
+person.invalid=Persona desconocida
