tg-103. [BE] Implementar endpoint para obtener el resumén de la internación

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -37,3 +37,6 @@ invalid.patient=Invalid patient
 
 ####### Person #######
 person.invalid=Invalid person
+
+####### Internment Episode #######
+internmentepisode.invalid=Invalid internment
