--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -40,3 +40,7 @@ invalid.patient=Paciente desconocido
 
 ####### Person #######
 person.invalid=Persona desconocida
+
+
+####### Internment Episode #######
+internmentepisode.invalid=Internación desconocida
