tg-119 add boton generar anamnesis en ficha de paciente de internacion

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -82,11 +82,14 @@
 			"TITLE": "Búsqueda de pacientes"
 		},
 		"internacion-paciente": {
+			"TITLE": "HCE Internación",
+			"actions": {
+				"ADD_EVAL_INGRESO": "Generar evaluación de ingreso"
+			},
 			"card": {
 				"DAYS_INTERNED": "{{days}} días internado",
 				"ADMISSION": "Ingreso: {{datetime}}"
-			},
-			"TITLE": "HCE Internación"
+			}
 		}
 	},
 	"presentation": {
