tg-155 [BE] Implementacion de servicios para almacenar diagnosticos y antecedentes - Anamnesis inicial

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -44,3 +44,4 @@ person.invalid=Persona desconocida
 
 ####### Internment Episode #######
 internmentepisode.invalid=Internación desconocida
+diagnosis.mandatory=Diagnóstico obligatorio
