--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -40,3 +40,4 @@ person.invalid=Invalid person
 
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
+diagnosis.mandatory=Diagnosis mandatory
