tg-143 agrego campo fecha en antecedentes-* form

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -24,7 +24,8 @@
 					"TITLE": "Antecedentes personales registrados",
 					"columns": {
 						"PROBLEM_TYPE": "Tipo de problema",
-						"REGISTRY_DATE": "Fecha registro"
+						"REGISTRY_DATE": "Fecha registro",
+						"AGREGAR": "Agregar antecedente"
 					}
 				}
 			},
