tg-183 [BE] Implementacion de servicios para almacenar Alergias - Anamnesis Inicial

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -41,3 +41,4 @@ person.invalid=Invalid person
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
 diagnosis.mandatory=Diagnosis mandatory
+snomed.invalid=Save SnomedCT code failed
