--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -45,3 +45,4 @@ person.invalid=Persona desconocida
 ####### Internment Episode #######
 internmentepisode.invalid=Internación desconocida
 diagnosis.mandatory=Diagnóstico obligatorio
+snomed.invalid=Fallo al guardar código SnomedCT
