--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -142,6 +142,23 @@
 					}
 				}
 			},
+			"medicacion": {
+				"TITLE": "Medicación",
+				"ADD": "Agregar medicación",
+				"PROBLEM_TYPE": "Tipo de medicación",
+				"form": {
+					"CLINICAL_STATUS": "Estado clínico",
+					"NOTE": "Notas"
+				},
+				"table": {
+					"TITLE": "Medicaciones registradas",
+					"columns": {
+						"NOTE": "Notas",
+						"STATUS": "Estado",
+						"PROBLEM_TYPE": "Tipo de problema"
+					}
+				}
+			},
 			"observations": {
 				"TITLE": "Observaciones",
 				"CURRENT_DISEASE": "Enfermedad actual",
