tg-221. [BE] Ajustar endpoint para obtener datos básicos del paciente

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ invalid.user=User invalid
 ########################
 
 ####### Patient #######
-invalid.patient=Invalid patient
+patient.invalid=Invalid patient
 
 ####### Person #######
 person.invalid=Invalid person
