--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -36,7 +36,7 @@ invalid.user=Usuario invalido
 
 
 ####### Patient #######
-invalid.patient=Paciente desconocido
+patient.invalid=Paciente desconocido
 
 ####### Person #######
 person.invalid=Persona desconocida
