tg-227 cambiar titulo medicacion en formulario anamnesis

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -163,7 +163,7 @@
 				}
 			},
 			"medicacion": {
-				"TITLE": "Medicación",
+				"TITLE": "Medicación habitual",
 				"ADD": "Agregar medicación",
 				"PROBLEM_TYPE": "Tipo de medicación",
 				"form": {
