tg-241. [BE] Implementar servicio signos vitales

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -42,3 +42,4 @@ person.invalid=Invalid person
 internmentepisode.invalid=Invalid internment
 diagnosis.mandatory=Diagnosis mandatory
 snomed.invalid=Save SnomedCT code failed
+value.mandatory=Valor mandatory
