--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -46,3 +46,5 @@ person.invalid=Persona desconocida
 internmentepisode.invalid=Internación desconocida
 diagnosis.mandatory=Diagnóstico obligatorio
 snomed.invalid=Fallo al guardar código SnomedCT
+
+value.mandatory=Valor obligatorio
