tg-237 Agregar boton Crear nuevo paciente

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -241,7 +241,8 @@
 			"TITLE_TEMPORARY":"Nuevo Paciente Temporal"
 		},
 		"search": {
-			"TITLE": "Búsqueda de pacientes"
+			"TITLE": "Búsqueda de pacientes",
+			"NEW_PATIENT": "Crear nuevo paciente"
 		}
 	},
 	"presentation": {
