tg-303 [BE] Validaciones en Endpoint de Actualizacion de documento de Anamnesis

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -38,8 +38,16 @@ patient.invalid=Invalid patient
 ####### Person #######
 person.invalid=Invalid person
 
+####### Institution #######
+institution.invalid=Invalid institution
+
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
 diagnosis.mandatory=Diagnosis mandatory
+
 snomed.invalid=Save SnomedCT code failed
+snomed.id.max.value=Sctid must be 20 characters long
+snomed.pt.max.value=Preferred term must be 100 characters long
+
+document.invalid=Invalid document
 value.mandatory=Valor mandatory
