--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -41,10 +41,17 @@ patient.invalid=Paciente desconocido
 ####### Person #######
 person.invalid=Persona desconocida
 
+####### Institution #######
+institution.invalid=Institución desconocida
 
 ####### Internment Episode #######
 internmentepisode.invalid=Internación desconocida
 diagnosis.mandatory=Diagnóstico obligatorio
+
 snomed.invalid=Fallo al guardar código SnomedCT
+snomed.id.max.value=Sctid debe contener hasta 20 caracteres
+snomed.pt.max.value=Los tèrminos preferidos deben contener hasta 100 caracteres
+
+document.invalid=Documento desconocido
 
 value.mandatory=Valor obligatorio
